Rettelser, samt animation af infographic

--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -80,47 +80,52 @@
 
         <h1 class="undersideh1">Sådan fungerer det</h1>
 
+        <p class="info-sadan-fungerer-det">
+            Nedenfor kan du se rejsen for vores måltidskasser, lige fra bestillingen til sorteringen af emballagen.
+        </p>
+        <p class="info-sadan-fungerer-det">Rul ned langs siden og følg rejsen.</p>
+
         <section class="infographic">
                 <img class="spisepinde" src="img/infographic/spisepinde.webp" alt="tegning af nudler og en spisepind">
 
                 <section class="besog-nippon">
                     <img class="computer" src="img/infographic/pc.webp" alt="billede af computer der er inde på Nippon">
-                    <p>Besøg Nippon.dk</p>
+                    <p class="tekst-infographic">Besøg Nippon.dk</p>
                 </section>
 
                 <section class="vaelg-maaltidskasse">
                     <img class="retter" src="img/infographic/retter.webp" alt="billede af forskellige retter, som man kan vælge på Nippon">
-                    <p>Vælg måltidskasse</p>
-                    <p>-</p>
-                    <p>Tilpas din menu!</p>
+                    <p class="tekst-infographic">Vælg måltidskasse</p>
+                    <p class="tekst-infographic">-</p>
+                    <p class="tekst-infographic">Tilpas din menu!</p>
                 </section>
 
                 <section class="levering">
                     <img class="ur" src="img/infographic/ur.webp" alt="Tegning af et ur">
-                    <p>Levering om 3 dage...</p>
+                    <p class="tekst-infographic">Levering om 3 dage...</p>
                 </section>
 
                 <section class="levering-dor">
                     <img class="dor" src="img/infographic/dor.webp" alt="en rød dør med en kasse fra Nippon">
-                    <p>Lige til døren!</p>
+                    <p class="tekst-infographic">Lige til døren!</p>
                 </section>
 
                 <section class="madlavning">
                     <img class="pan" src="img/infographic/pan.webp" alt="billede af madlavning">
-                    <p>Lav aftensmad på kun</p>
-                    <p>30 minutter </p>
+                    <p class="tekst-infographic">Lav aftensmad på kun</p>
+                    <p class="tekst-infographic">30 minutter </p>
                 </section>
 
                 <section class="maaltid">
                     <img class="mad" src="img/infographic/mad.webp" alt="Den færdige ret">
-                    <p>Uhm!</p>
-                    <p>Lækker japansk mad</p>
-                    <p>derhjemme</p>
+                    <p class="tekst-infographic">Uhm!</p>
+                    <p class="tekst-infographic">Lækker japansk mad</p>
+                    <p class="tekst-infographic">derhjemme</p>
                 </section>
 
                 <section class="genbrug">
                     <img class="skraldespande" src="img/infographic/genbrug.webp" alt="skraldespande med genbrugsikon">
-                    <p>Sorter din emballage!</p>
+                    <p class="tekst-infographic">Sorter din emballage!</p>
                 </section>
 
         </section>
