--- a/faq.html
+++ b/faq.html
@@ -97,14 +97,13 @@
             <!-- Tilføjer svar til spørgsmål -->
               <div class="faq-answer" id="answer1">
                 <p>
-                    Du kan bestille din måltidskasse på vores hjemmeside her.
-                    <br>
-                    <br>
                     Du har mulighed for at vælge mellem vores tre planlagte kasser 
                     og du kan tilpasse og ændre din kasse lige så tosset du vil.
                     <br>
                     <br>
-                    Læs mere om vores kasser Umi, Kiso og Yasai her.
+                    Læs mere om vores kasser Umi, Kiso og Yasai 
+                    <a class="link-faq" href="yasai-kassen.html">her</a>, eller 
+                    byg din egen måltidskasse <a class="link-faq" href="byg-selv.html">her</a>. 
                 </p>
               </div>
 
@@ -254,13 +253,12 @@
 
     <h4 class="h4-faq"> 
         Hvis ikke du fandt det svar du ledte efter, kan du altid kontakte vores kundeservice alle 
-        hverdage fra kl. 09.00-16.00.
+        hverdage fra <strong>kl. 09.00-16.00.</strong>
         <br>
         <br>
-        Send en mail til os på: Nippon-info@gmail.com
+        Send en mail til os på: <strong>Nippon-info@gmail.com</strong>
         <br>
-        <br>
-        Ring til os på: +45 37 82 46 91
+        Ring til os på: <strong>+45 37 82 46 91</strong>
     </h4>
     
     </main>
