Rettet fejl/kommentarer, forside so far

--- a/index.html
+++ b/index.html
@@ -82,32 +82,41 @@
     <main>
         <h2 class="velkommen">Velkommen</h2>
         <p class="pv">Oplev autentisk japansk smag. <br> Vores måltidskasser gør det let!</p>
+        
         <section class="solid">
             <h1 class="h1f">Vores måltidskasser</h1>
             <div class="mks">
-            <div class="kasse">
+            <a href="ups.html">
+            <div class="kasse"> 
                 <img class="kas" src="img/kasser/ramen_1.webp" alt="Shoyu ramen">
                 <img class="ikon" src="img/ikoner/kod.webp" alt="Kiso Ikon">
                 <h3 class="h3k">Kiso kassen</h3>
                 <p>Japanske retter med kød.</p>
             </div>
+            </a>
+            <a href="ups.html">
             <div class="kasse">
                 <img class="kas" src="img/kasser/dumpling_1.webp" alt="Dumplings med rejer">
                 <img class="ikon" src="img/ikoner/hav.webp" alt="Umi Ikon">
                 <h3 class="h3k">Umi kassen</h3>
                 <p>Japanske retter med fisk.</p>
             </div>
+            </a>
+            <a href="yasai-kassen.html">
             <div class="kasse">
                 <img class="kas" src="img/kasser/okonomiyaki.webp" alt="Okonomiyaki">
                 <img class="ikon" src="img/ikoner/veg.webp" alt="Yasai Ikon">
                 <h3 class="h3k">Yasai kassen</h3>
                 <p>Japanske vegetariske retter.</p>
             </div>
+            </a>
             </div>
 
+            <a href="byg-selv.html">
             <button class="bestil">
                 Bestil her
             </button>
+            </a>
 
         </section>
         
@@ -118,25 +127,86 @@
                 <br>harmoni, præsentation, teknikker og det ceremoniele aspekt.</p>
         </section>
 
+        <a href="sadan-fungerer-det.html">
         <section class="kant">
             <h2>Sådan fungerer det</h2>
-            <img src="img/infographic/nudel.webp" alt="">
-            <img src="img/infographic/pc.webp" alt="">
-            <img src="img/infographic/dor.webp" alt="">
-            <img src="img/infographic/mad.webp" alt="">
+            <figure class="infog">
+            <img class="nudel" src="img/infographic/nudel.webp" alt="Nudel">
+            <figure class="infob">
+            <img class="graphic" src="img/infographic/pc.webp" alt="Laptop illustration">
+            <img class="graphic" src="img/infographic/dor.webp" alt="Dør måltidskasse illustration">
+            <img class="graphic" src="img/infographic/mad.webp" alt="Mad opdækning">
+            </figure>
+            </figure>
         </section>
+        </a>
 
-        <button>
+        <a href="tilmeld-dig.html">
+        <button class="tilmeld">
             Tilmeld dig
         </button>
+        </a>
 
+        <a href="faq.html">
         <section class="solid">
             <h2>FAQ</h2>
-            <p>Her ser du vores oftest stillede spørgsmål. Fandt du ikke det du ledte efter, så læs mere her.</p>
-            <div>
-                <p>Hvordan sorterer jeg emballagen?</p>
-                <p>Hvordan ændre jeg min måltidskasse?</p>
-                <p>Hvordan fungerer levering?</p>
+            <div class="faqa">
+            <p>Her ser du<br>vores oftest stillede<br>spørgsmål. 
+                <br><br>
+                Fandt du ikke det<br>du ledte efter,<br>så læs mere her.</p>
+            <div class="sporgsmal">
+                <div class="svar"><p>Hvordan sorterer jeg emballagen?</p></div>
+                <div class="svar"><p>Hvordan ændre jeg min måltidskasse?</p></div>
+                <div class="svar"><p>Hvordan fungerer levering?</p></div>
+            </div>
+            </div>
+        </section>
+        </a>
+
+        <section class="nobg">
+            <h2>Pssst...</h2>
+            <p>Du kan selv vælge om du vil have vores udvalgte menu
+                <br>hver uge, eller om du vil vælge dine egne retter.
+                <br><b>Udforsk udvalget her.</b>
+            </p>            
+        </section>
+
+        <section class="kanta">
+            <a href="#">
+            <div class="kantak">
+                <h2>Anmeldelser</h2>
+                <p>“Jeg prøvede Umi kassen med min roomie.
+                    <br>Det var nemt at følge opskriften og vores
+                    <br>dumplings blev mega gode!
+                    <br>Vil helt sikkert prøve igen”
+                    <br>
+                    <br>
+                    - Kathrine</p>
+            </div>
+            </a>
+            <a href="#">
+            <div class="kantak">
+                <h2>Bæredygtighed</h2>
+                <img class="genbrugf" src="img/infographic/genbrug.webp" alt="Skraldespande">
+                <p>Læs mere om hvad vi gør og hvad du
+                    <br>kan gøre for miljøet <b>her</b>.
+                </p>
+            </div>
+            </a>
+        </section>
+        <section class="solid">
+            <div class="tilmeldkasse">
+            <div class="tilmeldinput">
+                <h2>Tilmeld dig her</h2>
+                <input type="text" placeholder="Mail">
+                <input type="text" placeholder="Navn">
+                <a href="tilmeld-dig.html">
+                    <button class="tilmeld">
+                    Tilmeld dig
+                    </button>
+                </a>
+            </div>
+            <img class="kassef" src="img/infographic/kasse.webp" alt="Nippon måltidskasse illustration">
             </div>
         </section>
     </main>
