--- a/byg-selv.html
+++ b/byg-selv.html
@@ -238,7 +238,7 @@
             <!-- pris + bestil -->
             <div class="knapperbund">
                 <p class="pris">Samplet pris 450 DKK</p>
-                <button onclick="location.href='din-kurv.html';" class="bestil">Bestil her</button>
+                <button onclick="location.href='din-kurv.html';" class="bestil-knap">Bestil her</button>
             </div>
             
         </div>
