Tilmelding på forsiden

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             <div class="tilmeldkasse">
             <div class="tilmeldinput">
                 <h2>Tilmeld dig her</h2>
+                <div class="inputborder">
                 <input type="text" placeholder="Mail">
                 <input type="text" placeholder="Navn">
                 <a href="tilmeld-dig.html">
@@ -205,6 +206,7 @@
                     Tilmeld dig
                     </button>
                 </a>
+            </div>
             </div>
             <img class="kassef" src="img/infographic/kasse.webp" alt="Nippon måltidskasse illustration">
             </div>
