slider på byg selv

--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -119,7 +119,8 @@
                     <div class="ret">
                         <img class="icon-ret" src="img/ikoner/veg.webp" alt="">
                         <img class="hjerte-ret" src="img/ikoner/hjerte-tomt.png" alt="">
-                        <img class="ret-img" src="img/kasser/okonomiyaki.webp" alt="okonomiyaki">
+                        <img class="hjerte-fuldt-ret" src="img/ikoner/hjerte-fuldt.webp" alt="">
+                    <img class="ret-img" src="img/kasser/okonomiyaki.webp" alt="okonomiyaki">
                         <h4 class="navn-ret">Okonomiyaki</h4>
                         <p class="tid-ret">25 min.</p>
                         <p class="beskrivelse-ret">Japansk kålpandekage.</p>
@@ -128,7 +129,8 @@
                     <div class="ret">
                         <img class="icon-ret" src="img/ikoner/veg.webp" alt="">
                         <img class="hjerte-ret" src="img/ikoner/hjerte-tomt.png" alt="">
-                        <img class="ret-img" src="img/kasser/dumpling_2.webp" alt="dumplings">
+                        <img class="hjerte-fuldt-ret" src="img/ikoner/hjerte-fuldt.webp" alt="">
+                    <img class="ret-img" src="img/kasser/dumpling_2.webp" alt="dumplings">
                         <h4 class="navn-ret">Dumplings</h4>
                         <p class="tid-ret">30 min.</p>
                         <p class="beskrivelse-ret">Dumplings med kål og svampe.</p>
@@ -137,18 +139,18 @@
                     <div class="ret">
                         <img class="icon-ret" src="img/ikoner/veg.webp" alt="">
                         <img class="hjerte-ret" src="img/ikoner/hjerte-tomt.png" alt="">
-                        <img class="ret-img" src="img/kasser/curry.webp" alt="Japansk Curry">
+                        <img class="hjerte-fuldt-ret" src="img/ikoner/hjerte-fuldt.webp" alt="">
+                    <img class="ret-img" src="img/kasser/curry.webp" alt="Japansk Curry">
                         <h4 class="navn-ret">Japansk Curry</h4>
                         <p class="tid-ret">30 min.</p>
                         <p class="beskrivelse-ret">Karry med kartofler og gulerødder.</p>
                     </div>
-                </div>
-                
-                <div class="kasser">
+
                     <div class="ret">
                         <img class="icon-ret" src="img/ikoner/hav.webp" alt="">
                         <img class="hjerte-ret" src="img/ikoner/hjerte-tomt.png" alt="">
-                        <img class="ret-img" src="img/kasser/suppe.webp" alt="Suppe">
+                        <img class="hjerte-fuldt-ret" src="img/ikoner/hjerte-fuldt.webp" alt="">
+                    <img class="ret-img" src="img/kasser/suppe.webp" alt="Suppe">
                         <h4 class="navn-ret">Suppe</h4>
                         <p class="tid-ret">20 min.</p>
                         <p class="beskrivelse-ret">Japansk suppe med dumplings.</p>
@@ -157,7 +159,8 @@
                     <div class="ret">
                         <img class="icon-ret" src="img/ikoner/kod.webp" alt="">
                         <img class="hjerte-ret" src="img/ikoner/hjerte-tomt.png" alt="">
-                        <img class="ret-img" src="img/kasser/yakiudon.webp" alt="Yaki Udon">
+                        <img class="hjerte-fuldt-ret" src="img/ikoner/hjerte-fuldt.webp" alt="">
+                    <img class="ret-img" src="img/kasser/yakiudon.webp" alt="Yaki Udon">
                         <h4 class="navn-ret">Yaki Udon</h4>
                         <p class="tid-ret">20 min.</p>
                         <p class="beskrivelse-ret">Med bok choy og shitake svampe.</p>
