Tilføjelse af succes siden + styling

--- a/succes.html
+++ b/succes.html
@@ -78,8 +78,21 @@
     <!-- main start -->
     <main>
 
+        <section class="succes">
+            <H1 class="succes-titel">Succes</H1>
 
-        <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
+            <img class="succes-ikon" src="img/ikoner/tjek.webp" alt="Tjek tegn">
+
+            <p>Vi har modtaget din ordre!</p>
+
+            <p>Du vil modtage en bekræftelse på mail.</p>
+
+            <p>Levering om 3 hverdage.</p>
+
+        </section>
+
+       
+
     </main>
     <!-- main slut -->
 
