--- a/annulleret.html
+++ b/annulleret.html
@@ -78,6 +78,18 @@
     <!-- main start -->
     <main>
 
+        <section class="annulleret">
+            <H1 class="annulleret-titel">Annulleret</H1>
+
+            <img class="annulleret-ikon" src="img/ikoner/kryds.webp" alt="Kryds ikon">
+
+            <p>Du har annulleret din ordre!</p>
+
+            <p>Hvis du gerne vil vide mere om vores måltidskasser, kan du læse mere <a class="link-annulleret" href="byg-selv.html">her.</a></p>
+
+        </section>
+
+
 
     </main>
     <!-- main slut -->
