Forside første udkast færdig

--- a/index.html
+++ b/index.html
@@ -149,11 +149,14 @@
 
         <a href="faq.html">
         <section class="solid">
-            <h2>FAQ</h2>
             <div class="faqa">
-            <p>Her ser du<br>vores oftest stillede<br>spørgsmål. 
-                <br><br>
+                <div class="faqb">
+                <h2>FAQ</h2>
+                <p>Her ser du<br>vores oftest stillede<br>spørgsmål. 
+                <br>
+                <br>
                 Fandt du ikke det<br>du ledte efter,<br>så læs mere her.</p>
+                </div>
             <div class="sporgsmal">
                 <div class="svar"><p>Hvordan sorterer jeg emballagen?</p></div>
                 <div class="svar"><p>Hvordan ændre jeg min måltidskasse?</p></div>
@@ -164,11 +167,13 @@
         </a>
 
         <section class="nobg">
+            
             <h2>Pssst...</h2>
             <p>Du kan selv vælge om du vil have vores udvalgte menu
                 <br>hver uge, eller om du vil vælge dine egne retter.
-                <br><b>Udforsk udvalget her.</b>
-            </p>            
+                <br><a href="byg-selv.html"></a><b>Udforsk udvalget her.</b></a> 
+            </p>  
+                 
         </section>
 
         <section class="kanta">
@@ -186,7 +191,7 @@
             </a>
             <a href="#">
             <div class="kantak">
-                <h2>Bæredygtighed</h2>
+                <h2>B<p class="ae">ae</p>redygtighed</h2>
                 <img class="genbrugf" src="img/infographic/genbrug.webp" alt="Skraldespande">
                 <p>Læs mere om hvad vi gør og hvad du
                     <br>kan gøre for miljøet <b>her</b>.
@@ -194,7 +199,7 @@
             </div>
             </a>
         </section>
-        <section class="solid">
+        <section class="solidt">
             <div class="tilmeldkasse">
             <div class="tilmeldinput">
                 <h2>Tilmeld dig her</h2>
@@ -202,7 +207,7 @@
                 <input type="text" placeholder="Mail">
                 <input type="text" placeholder="Navn">
                 <a href="tilmeld-dig.html">
-                    <button class="tilmeld">
+                    <button class="tilmeldk">
                     Tilmeld dig
                     </button>
                 </a>
