Tilføjelser til ups siden

--- a/ups.html
+++ b/ups.html
@@ -77,6 +77,16 @@
 
     <!-- main start -->
     <main>
+        <h1 class="ups-titel">Ups...</h1>
+        
+        <section class="ups">
+            <h3 class="ups-undertitel">Denne side eksisterer desværre ikke!</h3>
+            <img class="ups-kasse" src="img/infographic/kasse.webp" alt="Kasse med Nippon logo">
+            <p>Prøv vores <a href="yasai-kassen.html">måltidskasser.</a></p>
+            <img src="" alt="">
+            <p>Eller se hvordan Nippn fungerer <a href="sadan-fungerer-det.html">her.</a></p>
+            <button>Tilmeld dig</button>
+        </section>
 
     </main>
     <!-- main slut -->
