Færdige ups side + styling af siden

--- a/ups.html
+++ b/ups.html
@@ -80,11 +80,11 @@
         <h1 class="ups-titel">Ups...</h1>
         
         <section class="ups">
-            <h3 class="ups-undertitel">Denne side eksisterer desværre ikke!</h3>
+            <h3 class="ups-undertitel">Denne side eksisterer <br> desværre ikke!</h3>
             <img class="ups-kasse" src="img/infographic/kasse.webp" alt="Kasse med Nippon logo">
             <p>Prøv vores <a href="yasai-kassen.html">måltidskasser.</a></p>
-            <img src="" alt="">
-            <p>Eller se hvordan Nippn fungerer <a href="sadan-fungerer-det.html">her.</a></p>
+            <img class="ups-miniinfo" src="img/infographic/miniinfo-10.webp" alt="Mindre version af sådan fungerer det siden på Nippons hjemmeside">
+            <p>Eller se hvordan Nippon fungerer <a href="sadan-fungerer-det.html">her.</a></p>
             <button>Tilmeld dig</button>
         </section>
 
