--- a/ups.html
+++ b/ups.html
@@ -85,7 +85,7 @@
             <p>Prøv vores <a href="yasai-kassen.html">måltidskasser.</a></p>
             <img class="ups-miniinfo" src="img/infographic/miniinfo-10.webp" alt="Mindre version af sådan fungerer det siden på Nippons hjemmeside">
             <p>Eller se hvordan Nippon fungerer <a href="sadan-fungerer-det.html">her.</a></p>
-            <button>Tilmeld dig</button>
+            <button><a href="tilmeld-dig.html">Tilmeld dig</a></button>
         </section>
 
     </main>
