tilføjelser af links til 404 side i navbar

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <button onclick="dropdown1()" class="dropbtn drop1">Måltidskasser</button>
                 <div id="myDropdown1" class="dropdown-content content1">
                     <a href="yasai-kassen.html">Yasai<br>(Vegetar-kassen)</a>
-                    <a href="#">Kiso<br>(Basis-kassen)</a>
-                    <a href="#">Umi<br>(Hav-kassen)</a>
+                    <a href="ups.html">Kiso<br>(Basis-kassen)</a>
+                    <a href="ups.html">Umi<br>(Hav-kassen)</a>
                     <a href="byg-selv.html">Byg Selv</a>
                 </div>
             </div>
@@ -46,17 +46,17 @@
                 <div id="myDropdown2" class="dropdown-content content2">
                     <a href="sadan-fungerer-det.html">Sådan fungerer det</a>
                     <a href="faq.html">FAQ</a>
-                    <a href="#">Bæredygtighed</a>
-                    <a href="#">Anmeldelser</a>
+                    <a href="ups.html">Bæredygtighed</a>
+                    <a href="ups.html">Anmeldelser</a>
                 </div>
             </div>
     
             <div class="dropdown">
                 <button onclick="dropdown3()" class="dropbtn drop3">Din Konto</button>
                 <div id="myDropdown3" class="dropdown-content content3">
-                    <a href="#">Min måltidskasse</a>
-                    <a href="#">Mine favoritter</a>
-                    <a href="#">Tidligere måltidskasser</a>
+                    <a href="ups.html">Min måltidskasse</a>
+                    <a href="ups.html">Mine favoritter</a>
+                    <a href="ups.html">Tidligere måltidskasser</a>
                 </div>
             </div>
         </nav>
