--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -43,17 +43,17 @@
                 <div id="myDropdown2" class="dropdown-content content2">
                     <a href="sadan-fungerer-det.html">Sådan fungerer det</a>
                     <a href="faq.html">FAQ</a>
-                    <a href="#">Bæredygtighed</a>
-                    <a href="#">Anmeldelser</a>
+                    <a href="ups.html">Bæredygtighed</a>
+                    <a href="ups.html">Anmeldelser</a>
                 </div>
             </div>
     
             <div class="dropdown">
                 <button onclick="dropdown3()" class="dropbtn drop3">Din Konto</button>
                 <div id="myDropdown3" class="dropdown-content content3">
-                    <a href="#">Min måltidskasse</a>
-                    <a href="#">Mine favoritter</a>
-                    <a href="#">Tidligere måltidskasser</a>
+                    <a href="ups.html">Min måltidskasse</a>
+                    <a href="ups.html">Mine favoritter</a>
+                    <a href="ups.html">Tidligere måltidskasser</a>
                 </div>
             </div>
         </nav>
