--- a/byg-selv.html
+++ b/byg-selv.html
@@ -90,7 +90,7 @@
                 <button onclick="location.href='yasai-kassen.html';" >
                     <p>Ugens menu</p>
                 </button>
-                <button onclick="location.href='byg-selv.html';" id="activebtn">
+                <button onclick="location.href='byg-selv.html';" id="activebtn1">
                     <p>Byg selv</p>
                 </button>
             </div>
