--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -90,18 +90,18 @@
                 <button onclick="location.href='yasai-kassen.html';" >
                     <p>Ugens menu</p>
                 </button>
-                <button onclick="location.href='byg-selv.html';" id="activebtn">
+                <button onclick="location.href='byg-selv.html';" id="activebtn1">
                     <p>Byg selv</p>
                 </button>
             </div>
 
             <div>
                 <h3 class="knapperh3">Tilpas kassen</h3>
-                <button id="activebtn">
+                <button id="activebtn2">
                     <p class="knap1">2 personer</p>
                     <p class="knap2">&darr;</p>
                 </button>
-                <button id="activebtn">
+                <button id="activebtn3">
                     <p class="knap1">4 dage</p>
                     <p class="knap2">&darr;</p>
                 </button>
