--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- navigationsbar slut -->
 
         <div class="knapper">
-            <button id="login">Log ind</button>
+            <button onclick="location.href='tilmeld-dig.html';" id="login">Log ind</button>
             <div id="nav-hjerte">
                 <img class="red" src="img/ikoner/hjerte-tomt.png" alt="Farvoritter">
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
