--- a/ups.html
+++ b/ups.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <a id="logo" href="index.html">
+        <a onclick="location.href='tilmeld-dig.html';" id="logo" href="index.html">
             <img class="red" src="img/logo/logo_tekst.webp" alt="nippon text logo">
             <img class="blue" src="img/logo/logo_tekst_blue.webp" alt="nippon text logo">
         </a>
