--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -77,7 +77,27 @@
 
     <!-- main start -->
     <main>
-
+        <h1>Tilmeld dig</h1>
+        <section id="tilmeld">
+        <h4>Er du allerede tilmeldt?</h4>
+            <section class="kanttil">
+            <h5>Log ind</h5>
+            <div class="meld">
+            <input type="text" placeholder="Brugernavn">
+            <input type="text" placeholder="Kodeord">
+            <a href="ups.html"><button class="bestil">Log ind</button></a>
+            </div>
+            </section>
+            <h4>Er du ny hos os?</h4>
+            <section class="kanttilrod">
+            <h5>Opret dig</h5>
+            <div class="meld">
+            <input type="text" placeholder="Brugernavn">
+            <input type="text" placeholder="Kodeord">
+            <a href="ups.html"><button class="opret">Opret</button></a>
+        </div>
+        </section>
+    </section>
 
     </main>
     <!-- main slut -->
