--- a/byg-selv.html
+++ b/byg-selv.html
@@ -100,7 +100,7 @@
                 <div id="knapinfo1">
                     <button id="knap1" onclick="toggleChoice(1)">
                         <p class="knap1">2 personer</p>
-                        <p class="knap2">&darr;</p>
+                        <p id="pil1" class="knap2">&darr;</p>
                     </button>
                     <div id="drop1">
                         <p>1 person</p>
@@ -115,7 +115,7 @@
                 <div id="knapinfo2">
                     <button id="knap2" onclick="toggleChoice(2)">
                         <p class="knap1">4 dage</p>
-                        <p class="knap2">&darr;</p>
+                        <p id="pil2" class="knap2">&darr;</p>
                     </button>
                     <div id="drop2">
                         <p>1 dag</p>
