--- a/byg-selv.html
+++ b/byg-selv.html
@@ -87,20 +87,16 @@
         <div class="maltidknapper">
             <div>
                 <h3 class="knapperh3">Vælg kassetype</h3>
-                <button onclick="location.href='yasai-kassen.html';" >
-                    <p>Ugens menu</p>
-                </button>
-                <button onclick="location.href='byg-selv.html';" id="activebtn1">
-                    <p>Byg selv</p>
-                </button>
+                <button onclick="location.href='yasai-kassen.html';">Ugens menu</button>
+                <button onclick="location.href='byg-selv.html';" id="activebtn1">Byg selv</button>
             </div>
 
             <div>
                 <h3 class="knapperh3">Tilpas kassen</h3>
                 <div id="knapinfo1">
                     <button id="knap1" onclick="toggleChoice(1)">
-                        <p class="knap1">2 personer</p>
-                        <p id="pil1" class="knap2">&darr;</p>
+                        <span class="knap1">2 personer</span>
+                        <span id="pil1" class="knap2">&darr;</span>
                     </button>
                     <div id="drop1">
                         <p>1 person</p>
@@ -114,8 +110,8 @@
 
                 <div id="knapinfo2">
                     <button id="knap2" onclick="toggleChoice(2)">
-                        <p class="knap1">4 dage</p>
-                        <p id="pil2" class="knap2">&darr;</p>
+                        <span class="knap1">4 dage</span>
+                        <span id="pil2" class="knap2">&darr;</span>
                     </button>
                     <div id="drop2">
                         <p>1 dag</p>
