--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -85,50 +85,50 @@
         </p>
         <p class="info-sadan-fungerer-det">Rul ned langs siden og følg rejsen.</p>
 
-        <section class="infographic">
+        <div class="infographic">
                 <img class="spisepinde" src="img/infographic/spisepinde.webp" alt="tegning af nudler og en spisepind">
 
-                <section class="besog-nippon">
+                <div class="besog-nippon">
                     <img class="computer" src="img/infographic/pc.webp" alt="billede af computer der er inde på Nippon">
                     <p class="tekst-infographic">Besøg Nippon.dk</p>
-                </section>
+                </div>
 
-                <section class="vaelg-maaltidskasse">
+                <div class="vaelg-maaltidskasse">
                     <img class="retter" src="img/infographic/retter.webp" alt="billede af forskellige retter, som man kan vælge på Nippon">
                     <p class="tekst-infographic">Vælg måltidskasse</p>
                     <p class="tekst-infographic">-</p>
                     <p class="tekst-infographic">Tilpas din menu!</p>
-                </section>
+                </div>
 
-                <section class="levering">
+                <div class="levering">
                     <img class="ur" src="img/infographic/ur.webp" alt="Tegning af et ur">
                     <p class="tekst-infographic">Levering om 3 dage...</p>
-                </section>
+                </div>
 
-                <section class="levering-dor">
+                <div class="levering-dor">
                     <img class="dor" src="img/infographic/dor.webp" alt="en rød dør med en kasse fra Nippon">
                     <p class="tekst-infographic">Lige til døren!</p>
-                </section>
+                </div>
 
-                <section class="madlavning">
+                <div class="madlavning">
                     <img class="pan" src="img/infographic/pan.webp" alt="billede af madlavning">
                     <p class="tekst-infographic">Lav aftensmad på kun</p>
                     <p class="tekst-infographic">30 minutter </p>
-                </section>
+                </div>
 
-                <section class="maaltid">
+                <div class="maaltid">
                     <img class="mad" src="img/infographic/mad.webp" alt="Den færdige ret">
                     <p class="tekst-infographic">Uhm!</p>
                     <p class="tekst-infographic">Lækker japansk mad</p>
                     <p class="tekst-infographic">derhjemme</p>
-                </section>
+                </div>
 
-                <section class="genbrug">
+                <div class="genbrug">
                     <img class="skraldespande" src="img/infographic/genbrug.webp" alt="skraldespande med genbrugsikon">
                     <p class="tekst-infographic">Sorter din emballage!</p>
-                </section>
+                </div>
 
-        </section>
+        </div>
         
     </main>
     <!-- main slut -->
