--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -85,7 +85,7 @@
             <div class="meld">
             <input type="text" placeholder="Brugernavn">
             <input type="text" placeholder="Kodeord">
-            <a href="ups.html"><button class="bestil">Log ind</button></a>
+            <button onclick="location.href='ups.html';" class="bestil">Log ind</button>
             </div>
             </section>
             <h4>Er du ny hos os?</h4>
@@ -94,7 +94,7 @@
             <div class="meld">
             <input type="text" placeholder="Brugernavn">
             <input type="text" placeholder="Kodeord">
-            <a href="ups.html"><button class="opret">Opret</button></a>
+            <button onclick="location.href='ups.html';" class="opret">Opret</button>
         </div>
         </section>
     </section>
