--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -87,23 +87,19 @@
         <div class="maltidknapper">
             <div>
                 <h3 class="knapperh3">Vælg kassetype</h3>
-                <button onclick="location.href='yasai-kassen.html';" >
-                    <p>Ugens menu</p>
-                </button>
-                <button onclick="location.href='byg-selv.html';" id="activebtn1">
-                    <p>Byg selv</p>
-                </button>
+                <button onclick="location.href='yasai-kassen.html';">Ugens menu</button>
+                <button onclick="location.href='byg-selv.html';" id="activebtn1">Byg selv</button>
             </div>
 
             <div>
                 <h3 class="knapperh3">Tilpas kassen</h3>
                 <button id="activebtn2">
-                    <p class="knap1">2 personer</p>
-                    <p class="knap2">&darr;</p>
+                    <span class="knap1">2 personer</span>
+                    <span class="knap2">&darr;</span>
                 </button>
                 <button id="activebtn3">
-                    <p class="knap1">4 dage</p>
-                    <p class="knap2">&darr;</p>
+                    <span class="knap1">4 dage</span>
+                    <span class="knap2">&darr;</span>
                 </button>
             </div>
         </div>
