--- a/byg-selv.html
+++ b/byg-selv.html
@@ -139,7 +139,7 @@
         </ol>
 
         <!-- måltidskasser start -->
-        <div class="maltidskasser-boks">
+        <div id="maltidskasser-boks" class="maltidskasser-boks">
             <h2 id="ugens">Ugens udvalg</h2>
             
             <!-- vegetarkassen -->
@@ -269,7 +269,7 @@
 
             <!-- pris + bestil -->
             <div class="knapperbund">
-                <p class="pris">Samplet pris 450 DKK</p>
+                <p class="pris">Samplet pris: 450 DKK</p>
                 <button onclick="location.href='din-kurv.html';" class="bestil-knap">Bestil her</button>
             </div>
             
