--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -171,7 +171,7 @@
 
             <!-- bestil + pris -->
             <div class="knapperbund">
-                <p class="pris">Samplet pris 400 DKK</p>
+                <p class="pris">Samplet pris: 400 DKK</p>
                 <button onclick="location.href='din-kurv.html';" class="bestil-knap">Bestil her</button>
             </div>
             
